--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -224,7 +224,7 @@
 
     <!--uncomment when the translation is ready-->
 
-     <ul class="menu language">
+     <ul class="menu language" *ngIf="showContent">
       <li class="menu__item menu__item--with-submenu menu__item--disabled">
         <a class="menu__link">
           <span class="menu__link-text">
@@ -361,7 +361,7 @@
         </div>
       </div>
 
-        <div class="menu-mob__drop-wrap">
+        <div class="menu-mob__drop-wrap" *ngIf="showContent">
           <a class="menu-mob__link menu-mob__link--drop" (click)="toggleMenuDropdowns(NGX_TRANSLATE_FLAG)" [ngClass]="{'menu-mob__link--active': ngxTranslateList}"
              routerLink="/funds/balances">
             <span class="menu-mob__link-text">
@@ -407,6 +407,7 @@
         <a class="menu-mob__link" routerLink="/ieo" (click)="mobileLinkClick()"><span
           class="menu-mob__link-text">{{'IEO' | translate}}</span>
         </a>
+
         <!-- <div class="menu-mob__drop-wrap" *ngIf="showContent">
           <a class="menu-mob__link menu-mob__link--drop" (click)="toggleMenuDropdowns(IEO_FLAG)" [ngClass]="{'menu-mob__link--active': showIEOList}">
             <span class="menu-mob__link-text">{{'IEO' | translate}}</span>
@@ -415,6 +416,7 @@
             <a class="menu-mob__link" (click)="mobileLinkClick()" [routerLink]="'/ieo/' + ieo.id" *ngFor="let ieo of (ieoList$ | async)">{{ieo.currencyDescription}} ({{ieo.status | showStageStatus}})</a>
           </div>
         </div> -->
+
         <a class="menu-mob__link" href="https://support.exrates.me">
           <span class="menu-mob__link-text">{{'Support' | translate}}</span>
         </a>
