--- a/src/app/fiat/fiat.component.html
+++ b/src/app/fiat/fiat.component.html
@@ -23,34 +23,34 @@
 			<div class="benefits-items-wr">
 				<div class="benefits-item">
 					<div class="title-part">
-						<h3>24 Fiat Currencies</h3>
+						<h3>Personal Bank Account</h3>
 					</div>
 					<div class="description-part">
-						<p>Deposits and withdrawals via SWIFT / SEPA for 24 fiat currencies</p>
+						<p>We provide personal bank account with 3rd party payment option to 231 countries.</p>
 					</div>			
 				</div>
 				<div class="benefits-item">
 					<div class="title-part">
-						<h3>$50,000 Limit </h3>
+						<h3>Fast KYC</h3>
 					</div>
 					<div class="description-part">
-						<p>$50,000 deposit/withdrawal limit for a day</p>
+						<p>Automatic KYC process with outstanding support. Fully remote  account opening.</p>
 					</div>			
 				</div>
 				<div class="benefits-item">
 					<div class="title-part">
-						<h3>231 Countries </h3>
+						<h3>Secure payments</h3>
 					</div>
 					<div class="description-part">
-						<p>We work with 231 countries </p>
+						<p>Payment solution powered by Singaporian bank with the same license as PayPal & Apple Pay.</p>
 					</div>			
 				</div>
 				<div class="benefits-item pg-small">
 					<div class="title-part">
-						<h3>1% Commission</h3>
+						<h3>Low commissions</h3>
 					</div>
 					<div class="description-part">
-						<p>1% commission on account deposits</p>
+						<p>Free of charge SEPA outgoing payments./p>
 					</div>			
 				</div>
 				<div class="benefits-item pg-small">
@@ -63,10 +63,10 @@
 				</div>
 				<div class="benefits-item-large">
 					<div class="title-part">
-						<h3>$150,000 For VIP clients</h3>
+						<h3>Up to $500,000 monthly</h3>
 					</div>
 					<div class="description-part">
-						<p>Up to $ 150,000 limit for deposits and withdrawals for VIP clients</p>
+						<p>For VIP clients we provide special conditions for fiat deposit and withdraw in 35 currencies.</p>
 					</div>	
 					<div class="button-wr">
 						<a href="#" class="standart-btn white-variant" target="blank"><span>Become a VIP</span></a>
@@ -105,7 +105,7 @@
 						<span>2</span>
 					</div>
 					<div class="title-part">
-						<h5>Pass KYC</h5>
+						<h5>Provide basic personal information.</h5>
 					</div>
 				</div>
 				<div class="how-work-item">
