create common pipe for currency format

--- a/src/app/dashboard/components/embedded-orders-mobile/embedded-orders-history-mobile/embedded-orders-history-mobile.component.html
+++ b/src/app/dashboard/components/embedded-orders-mobile/embedded-orders-history-mobile/embedded-orders-history-mobile.component.html
@@ -58,7 +58,7 @@
       <span [class]="setClassForOrderTypeField(item.operationType)">{{item.operationType | replaceChar: '_': ' '}}</span>
     </td>
     <td class="table__cell table__cell--tar">
-      <div>{{item.exExchangeRate}} {{item.currencyPairName | splitCurrency: 2}}</div>
+      <div>{{item.exExchangeRate  | currencyFormat:'short':arrPairName[1]}} {{arrPairName[1]}}</div>
     </td>
     <td class="table__cell table__cell--arr-mob">
       <img [ngClass]="{'img-rotate': selectedOrder && selectedOrder.id === item.id}" src="../../assets/img/arr-toggler-down-blue.svg">
@@ -68,29 +68,30 @@
     <td class="table__details-cell" colspan="4">
       <div class="table__details-item">
         <div class="table__details-item-title">{{'Amount' | translate}}</div>
-        <div class="table__details-item-value">{{item.amountBase | roundCurrency: currency(item.currencyPairName, 1) | formatCurrency}}
-          {{item.currencyPairName | splitCurrency: 1}}
+        <div class="table__details-item-value">
+          {{item.amountBase | currencyFormat:'short':arrPairName[0]}} {{arrPairName[0]}}
         </div>
       </div>
       <div class="table__details-item">
         <div class="table__details-item-title">{{'Trading price' | translate}}</div>
-        <div class="table__details-item-value">{{item.exExchangeRate}} {{item.currencyPairName | splitCurrency: 2}}</div>
+        <div class="table__details-item-value">{{item.exExchangeRate | currencyFormat:'short':arrPairName[1]}} {{arrPairName[1]}}</div>
       </div>
       <div class="table__details-item">
         <div class="table__details-item-title">{{'Filled' | translate}}</div>
-        <div class="table__details-item-value">{{item.exExchangeRate}} {{item.currencyPairName | splitCurrency: 2}}</div>
+        <div class="table__details-item-value">{{item.exExchangeRate | currencyFormat:'short':arrPairName[1]}} {{arrPairName[1]}}</div>
       </div>
       <div class="table__details-item">
         <div class="table__details-item-title">{{'Fee' | translate}}</div>
-        <div class="table__details-item-value" *ngIf="!isVipUser">{{item.commissionFixedAmount}} {{item.currencyPairName | splitCurrency: 2}}</div>
+        <div class="table__details-item-value" *ngIf="!isVipUser">
+          {{item.commissionFixedAmount | currencyFormat:'short':arrPairName[1]}} {{arrPairName[1]}}
+        </div>
         <div class="table__details-item-value" *ngIf="isVipUser">0.0</div>
       </div>
       <div class="table__details-item">
         <div class="table__details-item-title">{{'In total' | translate}}</div>
         <div class="table__details-item-value">
                 <span>
-                  {{item.amountWithCommission | roundCurrency: currency(item.currencyPairName, 2) | formatCurrency}}
-                  <span>{{item.currencyPairName | splitCurrency: 2}}</span>
+                   {{item.amountWithCommission | currencyFormat:'short':arrPairName[1]}} {{arrPairName[1]}}
                 </span>
         </div>
       </div>
