--- a/src/app/dashboard/components/embedded-orders/embedded-orders-history/embedded-orders-history.component.html
+++ b/src/app/dashboard/components/embedded-orders/embedded-orders-history/embedded-orders-history.component.html
@@ -72,33 +72,28 @@
     </td>
     <td class="table__cell">
       <span>
-        {{(item.exExchangeRate || item.limitRate) | roundCurrency: currency(item.currencyPairName, 2) | formatCurrency}}
-        {{item.currencyPairName | splitCurrency: 2}}
+        {{(item.exExchangeRate || item.limitRate)  | currencyFormat:'short':arrPairName[1]}} {{arrPairName[1]}}
       </span>
     </td>
     <td class="table__cell">
       <span>
-        {{item.orderBaseType !== 'STOP_LIMIT' ? '-' : item.stopRate | roundCurrency: currency(item.currencyPairName, 2) | formatCurrency}}
-        {{item.orderBaseType !== 'STOP_LIMIT' ? '' : item.currencyPairName | splitCurrency: 2}}
+        {{item.orderBaseType !== 'STOP_LIMIT' ? '-' : item.stopRate  | currencyFormat:'short':arrPairName[1]}} {{item.orderBaseType !== 'STOP_LIMIT' ? '' : arrPairName[1]}}
       </span>
     </td>
     <td class="table__cell">
       <span>
-        {{item.amountBase | roundCurrency: currency(item.currencyPairName, 1 ) | formatCurrency}}
-        {{item.currencyPairName | splitCurrency: 1}}
+        {{item.amountBase | currencyFormat:'short':arrPairName[0]}} {{arrPairName[0]}}
       </span>
     </td>
     <td class="table__cell txt-grey">
       <span *ngIf="!isVipUser">
-        {{item.commissionFixedAmount | roundCurrency: currency(item.currencyPairName, 2) | formatCurrency}}
-        {{item.currencyPairName | splitCurrency: 2}}
+        {{item.commissionFixedAmount | currencyFormat:'short':arrPairName[1]}} {{arrPairName[1]}}
       </span>
       <span *ngIf="isVipUser">0.0</span>
     </td>
     <td class="table__cell">
       <span>
-        {{item.amountWithCommission | roundCurrency: currency(item.currencyPairName, 2) | formatCurrency}}
-        {{item.currencyPairName | splitCurrency: 2}}
+        {{item.amountWithCommission | currencyFormat:'short':arrPairName[1]}} {{arrPairName[1]}}
       </span>
     </td>
     <td class="table__cell">
