--- a/src/app/dashboard/components/order-book/order-book.component.html
+++ b/src/app/dashboard/components/order-book/order-book.component.html
@@ -67,19 +67,19 @@
           >
             <div class="order">
             <span>
-              {{item.total | roundCurrency | formatCurrency  | orderBookCutBigNum:maxCountCharacter}}
+              {{item.total | currencyFormat:'full':splitCurrencyName[1]:true  | orderBookCutBigNum:maxCountCharacter}}
             </span>
             </div>
 
             <div class="price jc-center">
             <span>
-              {{item.exrate | roundCurrency | formatCurrency:'full':splitCurrencyName[1]  | orderBookCutBigNum:maxCountCharacter}}
+              {{item.exrate | currencyFormat:'full':splitCurrencyName[1]:true  | orderBookCutBigNum:maxCountCharacter}}
             </span>
             </div>
 
             <div class="total jc-end">
             <span>
-              {{item.amount | roundCurrency | formatCurrency}}
+              {{item.amount | currencyFormat:'short':splitCurrencyName[0]}}
             </span>
             </div>
 
@@ -117,7 +117,7 @@
           (click)="onSelectOrder(item)">
           <div class="order">
             <span>
-              {{item.total  | roundCurrency | formatCurrency  | orderBookCutBigNum:maxCountCharacter}}
+              {{item.total  | currencyFormat:'full':splitCurrencyName[1]:true | orderBookCutBigNum:maxCountCharacter}}
             </span>
           </div>
 
@@ -126,13 +126,13 @@
 
           <div class="price jc-center">
             <span>
-              {{item.exrate | roundCurrency | formatCurrency:'full':splitCurrencyName[1]  | orderBookCutBigNum:maxCountCharacter}}
+              {{item.exrate | currencyFormat:'full':splitCurrencyName[1]:true  | orderBookCutBigNum:maxCountCharacter}}
             </span>
           </div>
 
           <div class="total jc-end">
             <span>
-              {{item.amount | roundCurrency | formatCurrency}}
+              {{item.amount | currencyFormat:'short':splitCurrencyName[0]}}
             </span>
           </div>
 
