--- a/src/app/funds/balance/balance-mob/balance-mob.component.html
+++ b/src/app/funds/balance/balance-mob/balance-mob.component.html
@@ -127,11 +127,11 @@
               </div>
             </td>
             <td class="table__cell table__cell--tal">
-              <span>{{item.activeBalance  | roundCurrency:item.currencyName | formatCurrency}}</span>
+              <span>{{item.activeBalance  | currencyFormat:'short':item.currencyName}}</span>
             </td>
             <td class="table__cell table__cell--tar">
-              <div *ngIf="priceIn === currencies.BTC">BTC {{item.btcAmount | roundCurrency | formatCurrency}}</div>
-              <div *ngIf="priceIn === currencies.USD">$ {{item.usdAmount | roundCurrency:'USD' | formatCurrency}}</div>
+              <div *ngIf="priceIn === currencies.BTC">BTC {{item.btcAmount | currencyFormat}}</div>
+              <div *ngIf="priceIn === currencies.USD">$ {{item.usdAmount | currencyFormat:'short':'USD'}}</div>
               <!-- <span class="txt-small txt-red">–0.24%</span> -->
             </td>
             <td class="table__cell table__cell--arr-mob">
