--- a/src/app/orders/open-orders/open-orders.component.html
+++ b/src/app/orders/open-orders/open-orders.component.html
@@ -221,7 +221,7 @@
           </td>
           <td class="table__cell">
             <span>
-              {{item.amountBase | roundCurrency: currency(item.currencyPairName, 1) | formatCurrency}}
+              {{item.amountBase | currencyFormat:'short':currency(item.currencyPairName, 1)}}
               {{item.currencyPairName | splitCurrency: 1}}
             </span>
           </td>
@@ -230,24 +230,24 @@
           </td>
           <td class="table__cell">
             <span>
-              {{(item.exExchangeRate || item.limitRate) | roundCurrency: currency(item.currencyPairName, 2) | formatCurrency}}
+              {{(item.exExchangeRate || item.limitRate) | currencyFormat:'short':currency(item.currencyPairName, 2)}}
               {{item.currencyPairName | splitCurrency: 2}}
             </span>
           </td>
           <td class="table__cell">
             <span>
-              {{item.orderBaseType !== 'STOP_LIMIT' ? '-' : item.stopRate | roundCurrency: currency(item.currencyPairName, 2) | formatCurrency}}
+              {{item.orderBaseType !== 'STOP_LIMIT' ? '-' : item.stopRate  | currencyFormat:'short':currency(item.currencyPairName, 2)}}
               {{item.orderBaseType !== 'STOP_LIMIT' ? '' : item.currencyPairName | splitCurrency: 2}}
             </span>
           </td>
           <td class="table__cell">
             <span class="orders__comission"></span><span class="orders__comission-usd"><span>
-              {{item.commissionFixedAmount | roundCurrency: currency(item.currencyPairName, 2) | formatCurrency}}
+              {{item.commissionFixedAmount  | currencyFormat:'short':currency(item.currencyPairName, 2)}}
               {{item.currencyPairName | splitCurrency: 2}}</span></span>
           </td>
           <td class="table__cell">
             <span>
-              {{item.amountWithCommission | roundCurrency: currency(item.currencyPairName, 2) | formatCurrency}}
+              {{item.amountWithCommission  | currencyFormat:'short':currency(item.currencyPairName, 2)}}
               {{item.currencyPairName | splitCurrency: 2}}
             </span>
           </td>
