--- a/src/app/popups/login-popup-mobile/login-popup-mobile.component.html
+++ b/src/app/popups/login-popup-mobile/login-popup-mobile.component.html
@@ -49,7 +49,7 @@
                 *ngIf="loginForm.get('email').errors['required']">
                 {{'This field is required.' | translate}}
               </span>
-                <span *ngIf="loginForm.get('email').invalid && !loginForm.get('email').errors['required']"
+              <span *ngIf="loginForm.get('email').invalid && !loginForm.get('email').errors['required']"
                       class=" wrap-input__message wrap-input__message--error">
                 {{'Please, enter valid email address.' | translate}}
               </span>
@@ -65,41 +65,47 @@
                    formControlName="password"
                    [ngClass]="{'wrap-input__input--error':
                     (!loginForm.get('password').valid
-                     && loginForm.get('password').touched
-                      || statusMessage)
-                       && loginForm.get('email').valid}"
+                    && loginForm.get('password').touched
+                    || statusMessage)
+                    && loginForm.get('email').valid}"
             >
             <label class="wrap-input__label" for=""
                    [ngClass]="{'wrap-input__label--error':
                     (!loginForm.get('password').valid
-                     && loginForm.get('password').touched
-                      || statusMessage)
-                       && loginForm.get('email').valid}"
+                    && loginForm.get('password').touched
+                    || statusMessage)
+                    && loginForm.get('email').valid}"
             >{{'Password' | translate}}</label>
             <div class="wrap-input__line"
                  [ngClass]="{'wrap-input__line--error':
                   (!loginForm.get('password').valid
-                   && loginForm.get('password').touched
-                    || statusMessage)
-                     && loginForm.get('email').valid}"
+                  && loginForm.get('password').touched
+                  || statusMessage)
+                  && loginForm.get('email').valid}"
             ></div>
             <span
               class="wrap-input__show-password"
               (click)="togglePasswordVisibility()"
               [ngClass]="{'wrap-input__show-password--active': isPasswordVisible}"
             >
-          </span>
+            </span>
             <!--Input error section starts-->
             <div
               *ngIf="loginForm.get('password').touched
-               && loginForm.get('password').errors != null
+                && loginForm.get('password').errors != null
                 && loginForm.get('email').valid">
               <div class="input-hint-wrapper">
-            <span class=" wrap-input__message wrap-input__message--error"
+                <span
+                  class=" wrap-input__message wrap-input__message--error"
                   *ngIf="loginForm.get('password').errors['required']">
-              {{'This field is required.' | translate}}
-            </span>
-          </div>
+                  {{'This field is required.' | translate}}
+                </span>
+                <span
+                  class="wrap-input__message wrap-input__message--error"
+                  *ngIf="loginForm.get('password').errors['passwordValidation']">
+                  {{'Current password invalid.' | translate}}
+                </span>
+              </div>
             </div>
 
             <div *ngIf="statusMessage && loginForm.get('email').valid">
