--- a/src/app/ieo/components/ieo-requirements/ieo-requirements.component.html
+++ b/src/app/ieo/components/ieo-requirements/ieo-requirements.component.html
@@ -1,5 +1,5 @@
 <!-- start component -->
-<div class="ieo-requirements">
+<div class="ieo-requirements" *ngIf="requirements">
   <div class="ieo-requirements-wr">
     <div class="title-part">
       <h3>{{'Requirements for participating in this token sale' | translate}}</h3>
