--- a/src/app/funds/pending-request-mob/pending-request-mob.component.html
+++ b/src/app/funds/pending-request-mob/pending-request-mob.component.html
@@ -69,7 +69,7 @@
                 </div>
               </td>
               <td class="table__cell table__cell--tar">
-                {{item.amount | currencyFormat:'short':item.currency}}
+                {{item.amount | currencyFormat:item.currency}}
               </td>
               <td class="table__cell table__cell--arr-mob">
                 <svg width="12" height="11" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
