--- a/src/app/dashboard/components/markets/markets.component.html
+++ b/src/app/dashboard/components/markets/markets.component.html
@@ -117,7 +117,7 @@
                     <!--<span class="txt-indicate">{{pair.lastOrderRate | replaceNumber:isFiat}}</span>-->
                   <!--</ng-template>-->
 
-                  <span class="txt-indicate">{{pair.lastOrderRate | currencyFormat:'full':pair.market:true}}</span>
+                  <span class="txt-indicate">{{pair.lastOrderRate | currencyFormat:pair.market:'full':true}}</span>
 
                   <div class="txt-small txt-light-grey" *ngIf="pair.market !== 'USD'">$ {{ pair.priceInUsd | number: '1.0-2' | replaceNumber:true}}</div>
                 </div>
