--- a/src/app/funds/balance/balance-table/balance-table.component.html
+++ b/src/app/funds/balance/balance-table/balance-table.component.html
@@ -34,19 +34,19 @@
           </div>
         </td>
         <td class="table__cell table__cell--tal">
-          <span>{{(+item.activeBalance + +item.reservedByOrders + +item.reservedByMerchant + +item.onConfirmation) | currencyFormat:'short':item.currencyName}}</span>
+          <span>{{(+item.activeBalance + +item.reservedByOrders + +item.reservedByMerchant + +item.onConfirmation) | currencyFormat:item.currencyName}}</span>
         </td>
         <td class="table__cell table__cell--tar">
-          <span>{{item.activeBalance | currencyFormat:'short':item.currencyName}}</span>
+          <span>{{item.activeBalance | currencyFormat:item.currencyName}}</span>
         </td>
         <td class="table__cell table__cell--tar">
-          <span>{{item.onConfirmation | currencyFormat:'short':item.currencyName}}</span>
+          <span>{{item.onConfirmation | currencyFormat:item.currencyName}}</span>
         </td>
         <td class="table__cell table__cell--tar">
-          <span>{{item.reservedByMerchant | currencyFormat:'short':item.currencyName}}</span>
+          <span>{{item.reservedByMerchant | currencyFormat:item.currencyName}}</span>
         </td>
         <td class="table__cell table__cell--tar">
-          <span>{{item.reservedByOrders | currencyFormat:'short':item.currencyName}}</span>
+          <span>{{item.reservedByOrders | currencyFormat:item.currencyName}}</span>
         </td>
         <!-- <td class="table__cell table__cell--tar">
           <div class="balance__change">
